[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minilab-hand"
version = "0.1.0"
description = "A lightweight project for dexterous hand reinforcement learning and simulation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "torch",
    "mujoco>=3.0.0",
    "gymnasium",
]
